feat: add endpoint POST /users for create user, GET /users/:id for get user by ID, DELETE /users/:id for delete user by ID
